# qnavierstokes

./: .gitignore  .qmake.conf  CMakeLists.txt  qnavierstokes.pro
BottomHeating/: BottomHeating.pro  BottomHeating_global.h  bottomheatingsolver.cpp  bottomheatingsolver.h
ColorScale/: ColorScale.pro  ColorScale_global.h  colorscale.cpp  colorscale.h
EmfPainter/: EmfPainter.pro  EmfPainter_global.h  emfpainter.cpp  emfpainter.h
FEMTools/: FEMTools.pro
FEMTools/TriangleFEMTools/: TriangleFEMTools.pro  TriangleFEMTools_global.h  trianglefemtools.cpp  trianglefemtools.h
GUI/: GUI.pro  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  helpwindow.cpp  helpwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintaim.h  settings.h  settingswindow.cpp  settingswindow.h  settingswindow.ui
Help/: about.htm  index.htm  work.htm
MatrixTools/: MatrixTools.pro
MatrixTools/CSRTools/: CSRTools.pro  CSRTools_global.h  csrtools.cpp  csrtools.h
OpenGLPainter/: OpenGLPainter.pro  OpenGLPainter_global.h  openglpainter.cpp  openglpainter.h
SLAESolver/: SLAESolver.pro
SLAESolver/Gauss/: Gauss.pro  Gauss_global.h  gauss.cpp  gauss.h
SLAESolver/LOS/: LOS.pro  LOS_global.h  los.cpp  los.h
SideHeating/: SideHeating.pro  SideHeating_global.h  sideheatingsolver.cpp  sideheatingsolver.h
src/app/: CMakeLists.txt  about_window.cpp  about_window.hpp  about_window.ui  help_window.cpp  help_window.hpp  ipainter.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  scientific_spinbox.cpp  scientific_spinbox.hpp  settings.hpp  settings_window.cpp  settings_window.hpp
src/bottom_heating/: CMakeLists.txt  bottom_heating_solver.cpp  bottom_heating_solver.hpp
src/color_scale/: CMakeLists.txt  color_scale.cpp  color_scale.hpp
src/emf_painter/: CMakeLists.txt  emf_painter.cpp  emf_painter.hpp
src/fem_tools/: CMakeLists.txt
src/fem_tools/triangle_fem_tools/: CMakeLists.txt  triangle_fem_tools.cpp  triangle_fem_tools.hpp
src/help/: CMakeLists.txt  help_browser.cpp  help_browser.hpp  help_engine.cpp  help_engine.hpp  help_window.cpp  help_window.hpp  help_window.ui  qnavierstokes.qhcp  qnavierstokes.qhp
src/help/content/: formats.htm  settings.htm
src/matrix_tools/: CMakeLists.txt
src/matrix_tools/csr_tools/: CMakeLists.txt  csr_tools.cpp  csr_tools.hpp
src/opengl_painter/: CMakeLists.txt  opengl_painter.cpp  opengl_painter.hpp
src/settings/: CMakeLists.txt  settings.hpp  settings_manager.cpp  settings_manager.hpp  settings_window.cpp  settings_window.hpp  settings_window.ui
src/side_heating/: CMakeLists.txt  side_heating_solver.cpp  side_heating_solver.hpp
src/slae_solver/: CMakeLists.txt
src/slae_solver/gauss/: CMakeLists.txt  gauss.cpp  gauss.hpp
src/slae_solver/los/: CMakeLists.txt  los.cpp  los.hpp
